--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,11 @@
         "kartik-v/yii2-mpdf": "*",
         "kartik-v/yii2-social": "*",
         "kartik-v/yii2-widget-datepicker": "*",
+        "kartik-v/yii2-grid": "*",
         "dominus77/yii2-sweetalert2-widget": "*",
-        "kv4nt/yii2-owl-carousel2": "*"
+        "kv4nt/yii2-owl-carousel2": "*",
+        "powerkernel/yii2-flag-icon-css": "*",
+        "timurmelnikov/yii2-loading-overlay": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
